crates/ruff_python_parser/tests/snapshots/valid_syntax@parenthesized_context_manager_py39.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/parenthesized_context_manager_py39.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..126,
        body: Suite {
            range: 0..126,
            node_index: NodeIndex(None),
            statements: [
                With(
                    StmtWith {
                        node_index: NodeIndex(None),
                        range: 43..73,
                        is_async: false,
                        items: [
                            WithItem {
                                range: 49..57,
                                node_index: NodeIndex(None),
                                context_expr: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 49..52,
                                        id: Name("foo"),
                                        ctx: Load,
                                    },
                                ),
                                optional_vars: Some(
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 56..57,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                ),
                            },
                            WithItem {
                                range: 59..67,
                                node_index: NodeIndex(None),
                                context_expr: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 59..62,
                                        id: Name("bar"),
                                        ctx: Load,
                                    },
                                ),
                                optional_vars: Some(
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 66..67,
                                            id: Name("y"),
                                            ctx: Store,
                                        },
                                    ),
                                ),
                            },
                        ],
                        body: Suite {
                            range: 70..73,
                            node_index: NodeIndex(None),
                            statements: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 70..73,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 70..73,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    },
                ),
                With(
                    StmtWith {
                        node_index: NodeIndex(None),
                        range: 74..99,
                        is_async: false,
                        items: [
                            WithItem {
                                range: 80..83,
                                node_index: NodeIndex(None),
                                context_expr: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 80..83,
                                        id: Name("foo"),
                                        ctx: Load,
                                    },
                                ),
                                optional_vars: None,
                            },
                            WithItem {
                                range: 85..93,
                                node_index: NodeIndex(None),
                                context_expr: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 85..88,
                                        id: Name("bar"),
                                        ctx: Load,
                                    },
                                ),
                                optional_vars: Some(
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 92..93,
                                            id: Name("y"),
                                            ctx: Store,
                                        },
                                    ),
                                ),
                            },
                        ],
                        body: Suite {
                            range: 96..99,
                            node_index: NodeIndex(None),
                            statements: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 96..99,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 96..99,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    },
                ),
                With(
                    StmtWith {
                        node_index: NodeIndex(None),
                        range: 100..125,
                        is_async: false,
                        items: [
                            WithItem {
                                range: 106..114,
                                node_index: NodeIndex(None),
                                context_expr: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 106..109,
                                        id: Name("foo"),
                                        ctx: Load,
                                    },
                                ),
                                optional_vars: Some(
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 113..114,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                ),
                            },
                            WithItem {
                                range: 116..119,
                                node_index: NodeIndex(None),
                                context_expr: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 116..119,
                                        id: Name("bar"),
                                        ctx: Load,
                                    },
                                ),
                                optional_vars: None,
                            },
                        ],
                        body: Suite {
                            range: 122..125,
                            node_index: NodeIndex(None),
                            statements: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 122..125,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 122..125,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ],
        },
    },
)
```
