crates/ruff_python_parser/tests/snapshots/valid_syntax@parenthesized_named_expr_index_py38.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/parenthesized_named_expr_index_py38.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..55,
        body: Suite {
            range: 0..55,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 43..54,
                        value: Subscript(
                            ExprSubscript {
                                node_index: NodeIndex(None),
                                range: 43..54,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 43..46,
                                        id: Name("lst"),
                                        ctx: Load,
                                    },
                                ),
                                slice: Named(
                                    ExprNamed {
                                        node_index: NodeIndex(None),
                                        range: 48..52,
                                        target: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 48..49,
                                                id: Name("x"),
                                                ctx: Store,
                                            },
                                        ),
                                        value: NumberLiteral(
                                            ExprNumberLiteral {
                                                node_index: NodeIndex(None),
                                                range: 51..52,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
