crates/ruff_python_parser/tests/snapshots/valid_syntax@parenthesized_named_expr_index_py39.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/parenthesized_named_expr_index_py39.py
---
## AST

```
Module(
    ModModule {
        range: 0..55,
        body: [
            Expr(
                StmtExpr {
                    range: 43..54,
                    value: Subscript(
                        ExprSubscript {
                            range: 43..54,
                            value: Name(
                                ExprName {
                                    range: 43..46,
                                    id: Name("lst"),
                                    ctx: Load,
                                },
                            ),
                            slice: Named(
                                ExprNamed {
                                    range: 48..52,
                                    target: Name(
                                        ExprName {
                                            range: 48..49,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    value: NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 51..52,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
